@@ -15,7 +15,6 @@
  */
 package com.android.tradefed.testtype;
 
-import com.android.ddmlib.testrunner.TestIdentifier;
 import com.android.tradefed.build.IBuildInfo;
 import com.android.tradefed.build.IFolderBuildInfo;
 import com.android.tradefed.config.GlobalConfiguration;
@@ -24,9 +23,11 @@ import com.android.tradefed.config.IConfigurationReceiver;
 import com.android.tradefed.config.Option;
 import com.android.tradefed.invoker.IInvocationContext;
 import com.android.tradefed.log.LogUtil.CLog;
+import com.android.tradefed.metrics.proto.MetricMeasurement.Metric;
 import com.android.tradefed.result.FileInputStreamSource;
 import com.android.tradefed.result.ITestInvocationListener;
 import com.android.tradefed.result.LogDataType;
+import com.android.tradefed.result.TestDescription;
 import com.android.tradefed.util.CommandResult;
 import com.android.tradefed.util.CommandStatus;
 import com.android.tradefed.util.FileUtil;
@@ -44,7 +45,7 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 
 /**
@@ -130,13 +131,18 @@ public abstract class SubprocessTfLauncher
         mRunUtil = runUtil;
     }
 
+    /** Returns the {@link IRunUtil} that will be used for the subprocess command. */
+    protected IRunUtil getRunUtil() {
+        return mRunUtil;
+    }
+
     /**
      * Setup before running the test.
      */
     protected void preRun() {
         Assert.assertNotNull(mBuildInfo);
         Assert.assertNotNull(mConfigName);
-        IFolderBuildInfo tfBuild = (IFolderBuildInfo)mBuildInfo;
+        IFolderBuildInfo tfBuild = (IFolderBuildInfo) mBuildInfo;
         mRootDir = tfBuild.getRootDir().getAbsolutePath();
         String jarClasspath = FileUtil.getPath(mRootDir, "*");
 
@@ -156,6 +162,8 @@ public abstract class SubprocessTfLauncher
         if (mRemoteDebug) {
             mCmdArgs.add("-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=10088");
         }
+        // FIXME: b/72742216: This prevent the illegal reflective access
+        mCmdArgs.add("--add-opens=java.base/java.nio=ALL-UNNAMED");
         mCmdArgs.add("-cp");
 
         mCmdArgs.add(jarClasspath);
@@ -345,7 +353,7 @@ public abstract class SubprocessTfLauncher
     private void testCleanStdErr(File stdErrFile, ITestInvocationListener listener)
             throws IOException {
         listener.testRunStarted("StdErr", 1);
-        TestIdentifier tid = new TestIdentifier("stderr-test", "checkIsEmpty");
+        TestDescription tid = new TestDescription("stderr-test", "checkIsEmpty");
         listener.testStarted(tid);
         if (!FileUtil.readStringFromFile(stdErrFile).isEmpty()) {
             String trace =
@@ -354,7 +362,7 @@ public abstract class SubprocessTfLauncher
                             FileUtil.readStringFromFile(stdErrFile));
             listener.testFailed(tid, trace);
         }
-        listener.testEnded(tid, Collections.emptyMap());
-        listener.testRunEnded(0, Collections.emptyMap());
+        listener.testEnded(tid, new HashMap<String, Metric>());
+        listener.testRunEnded(0, new HashMap<String, Metric>());
     }
 }
