@@ -18,7 +18,6 @@ package com.android.tradefed.testtype;
 import static org.junit.Assert.assertTrue;
 
 import com.android.ddmlib.IDevice;
-import com.android.ddmlib.testrunner.TestIdentifier;
 import com.android.tradefed.build.IBuildInfo;
 import com.android.tradefed.build.IFolderBuildInfo;
 import com.android.tradefed.command.CommandOptions;
@@ -28,9 +27,11 @@ import com.android.tradefed.config.OptionSetter;
 import com.android.tradefed.device.ITestDevice;
 import com.android.tradefed.device.NullDevice;
 import com.android.tradefed.device.StubDevice;
+import com.android.tradefed.metrics.proto.MetricMeasurement.Metric;
 import com.android.tradefed.result.FileInputStreamSource;
 import com.android.tradefed.result.ITestInvocationListener;
 import com.android.tradefed.result.LogDataType;
+import com.android.tradefed.result.TestDescription;
 import com.android.tradefed.util.CommandResult;
 import com.android.tradefed.util.CommandStatus;
 import com.android.tradefed.util.IRunUtil;
@@ -39,16 +40,16 @@ import com.android.tradefed.util.IRunUtil.EnvPriority;
 import org.easymock.EasyMock;
 import org.junit.Before;
 import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.JUnit4;
 
 import java.io.File;
 import java.io.FileOutputStream;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
-/**
- * Unit tests for {@link VersionedTfLauncher}
- */
+/** Unit tests for {@link VersionedTfLauncher}. */
+@RunWith(JUnit4.class)
 public class VersionedTfLauncherTest {
 
     private static final String FAKE_SERIAL = "FAKE_SERIAL";
@@ -119,6 +120,7 @@ public class VersionedTfLauncherTest {
                                 (FileOutputStream) EasyMock.anyObject(),
                                 EasyMock.eq("java"),
                                 (String) EasyMock.anyObject(),
+                                EasyMock.eq("--add-opens=java.base/java.nio=ALL-UNNAMED"),
                                 EasyMock.eq("-cp"),
                                 (String) EasyMock.anyObject(),
                                 EasyMock.eq("com.android.tradefed.command.CommandRunner"),
@@ -147,10 +149,10 @@ public class VersionedTfLauncherTest {
                 (FileInputStreamSource)EasyMock.anyObject());
         EasyMock.expectLastCall().times(3);
         mMockListener.testRunStarted("StdErr", 1);
-        mMockListener.testStarted((TestIdentifier)EasyMock.anyObject());
-        mMockListener.testEnded((TestIdentifier)EasyMock.anyObject(),
-                EasyMock.eq(Collections.<String, String>emptyMap()));
-        mMockListener.testRunEnded(0, Collections.emptyMap());
+        mMockListener.testStarted((TestDescription) EasyMock.anyObject());
+        mMockListener.testEnded(
+                (TestDescription) EasyMock.anyObject(), EasyMock.eq(new HashMap<String, Metric>()));
+        mMockListener.testRunEnded(0, new HashMap<String, Metric>());
 
         EasyMock.expect(mMockConfig.getCommandOptions()).andReturn(new CommandOptions());
         EasyMock.replay(mMockTestDevice, mMockBuildInfo, mMockRunUtil, mMockListener, mMockConfig);
@@ -178,6 +180,7 @@ public class VersionedTfLauncherTest {
                                 (FileOutputStream) EasyMock.anyObject(),
                                 EasyMock.eq("java"),
                                 (String) EasyMock.anyObject(),
+                                EasyMock.eq("--add-opens=java.base/java.nio=ALL-UNNAMED"),
                                 EasyMock.eq("-cp"),
                                 (String) EasyMock.anyObject(),
                                 EasyMock.eq("com.android.tradefed.command.CommandRunner"),
@@ -201,10 +204,10 @@ public class VersionedTfLauncherTest {
                 (FileInputStreamSource)EasyMock.anyObject());
         EasyMock.expectLastCall().times(3);
         mMockListener.testRunStarted("StdErr", 1);
-        mMockListener.testStarted((TestIdentifier)EasyMock.anyObject());
-        mMockListener.testEnded((TestIdentifier)EasyMock.anyObject(),
-                EasyMock.eq(Collections.<String, String>emptyMap()));
-        mMockListener.testRunEnded(0, Collections.emptyMap());
+        mMockListener.testStarted((TestDescription) EasyMock.anyObject());
+        mMockListener.testEnded(
+                (TestDescription) EasyMock.anyObject(), EasyMock.eq(new HashMap<String, Metric>()));
+        mMockListener.testRunEnded(0, new HashMap<String, Metric>());
 
         EasyMock.expect(mMockConfig.getCommandOptions()).andReturn(new CommandOptions());
         EasyMock.replay(mMockTestDevice, mMockBuildInfo, mMockRunUtil, mMockListener, mMockConfig);
@@ -228,6 +231,7 @@ public class VersionedTfLauncherTest {
                                 (FileOutputStream) EasyMock.anyObject(),
                                 EasyMock.eq("java"),
                                 (String) EasyMock.anyObject(),
+                                EasyMock.eq("--add-opens=java.base/java.nio=ALL-UNNAMED"),
                                 EasyMock.eq("-cp"),
                                 (String) EasyMock.anyObject(),
                                 EasyMock.eq("com.android.tradefed.command.CommandRunner"),
@@ -255,11 +259,10 @@ public class VersionedTfLauncherTest {
                 (FileInputStreamSource) EasyMock.anyObject());
         EasyMock.expectLastCall().times(3);
         mMockListener.testRunStarted("StdErr", 1);
-        mMockListener.testStarted((TestIdentifier) EasyMock.anyObject());
+        mMockListener.testStarted((TestDescription) EasyMock.anyObject());
         mMockListener.testEnded(
-                (TestIdentifier) EasyMock.anyObject(),
-                EasyMock.eq(Collections.<String, String>emptyMap()));
-        mMockListener.testRunEnded(0, Collections.emptyMap());
+                (TestDescription) EasyMock.anyObject(), EasyMock.eq(new HashMap<String, Metric>()));
+        mMockListener.testRunEnded(0, new HashMap<String, Metric>());
 
         EasyMock.expect(mMockConfig.getCommandOptions()).andReturn(new CommandOptions());
         EasyMock.replay(mMockTestDevice, mMockBuildInfo, mMockRunUtil, mMockListener, mMockConfig);
@@ -298,6 +301,7 @@ public class VersionedTfLauncherTest {
                                 (FileOutputStream) EasyMock.anyObject(),
                                 EasyMock.eq("java"),
                                 (String) EasyMock.anyObject(),
+                                EasyMock.eq("--add-opens=java.base/java.nio=ALL-UNNAMED"),
                                 EasyMock.eq("-cp"),
                                 (String) EasyMock.anyObject(),
                                 EasyMock.eq("com.android.tradefed.command.CommandRunner"),
@@ -329,11 +333,10 @@ public class VersionedTfLauncherTest {
                 (FileInputStreamSource) EasyMock.anyObject());
         EasyMock.expectLastCall().times(3);
         mMockListener.testRunStarted("StdErr", 1);
-        mMockListener.testStarted((TestIdentifier) EasyMock.anyObject());
+        mMockListener.testStarted((TestDescription) EasyMock.anyObject());
         mMockListener.testEnded(
-                (TestIdentifier) EasyMock.anyObject(),
-                EasyMock.eq(Collections.<String, String>emptyMap()));
-        mMockListener.testRunEnded(0, Collections.emptyMap());
+                (TestDescription) EasyMock.anyObject(), EasyMock.eq(new HashMap<String, Metric>()));
+        mMockListener.testRunEnded(0, new HashMap<String, Metric>());
         EasyMock.expect(mMockConfig.getCommandOptions()).andReturn(new CommandOptions());
         EasyMock.replay(mMockTestDevice, mMockBuildInfo, mMockRunUtil, mMockListener, mMockConfig);
         shardedTest.run(mMockListener);
